# QT

lesson2/task1/: CMakeLists.txt  main.cpp
lesson3/task1/task1/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
lesson4/build-task1-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
lesson4/build-task1-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-0bdb5a44e4b06047656a.json  cmakeFiles-v1-d9c6b957328d9ba29343.json  codemodel-v2-223c3d989c2ce27a185f.json  directory-.-Debug-72aaebe3027d78467f30.json  index-2025-08-06T14-48-27-0485.json  target-task1-Debug-030b64102a671426c40e.json  (+2 more)
lesson4/build-task1-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
lesson4/build-task1-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
lesson4/build-task1-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/task1_autogen/: deps
lesson4/build-task1-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/task1_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
lesson4/build-task1-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/task1_autogen/include/: ui_mainwindow.h
lesson4/task1/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
lesson5/task1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
lesson8/task1/: database.cpp  database.h  dbdata.cpp  dbdata.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
lesson9/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
(+28 files in other folders)
